# remote_work

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
spar/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-vllm-macos.txt  requirements-vllm.txt  requirements.txt
spar/.claude/: settings.json
spar/.claude/hooks/: check-tests.sh  run-tests.sh  subagent-codex.sh
spar/configs/milvus/: docker-compose.yml
spar/data/samples/: alarm_excel_ref_sample.xlsx  counter_ref_sample.xlsx  feature_desc_sample.docx  parameter_ref_sample.xlsx
spar/dictionary/: acronyms.json  samsung_entities.json
spar/docs/: call_flow_backend.md  call_flow_preprocessing.md  prd.md
spar/docs/superpowers/plans/: 2026-04-30-abbrev-mapping.md  2026-05-01-3gpp-routing-plan.md  2026-05-01-bm25-hybrid-search.md  2026-05-01-codex-subagent-workflow.md  2026-05-01-encoder-simplify.md  2026-05-01-encoder-singleton.md  2026-05-01-excel-term-dict.md  2026-05-01-hyde-multi-query.md  2026-05-01-langgraph-eval-pipeline.md  2026-05-01-langgraph-pipeline.md  2026-05-01-md-ingest-pipeline.md  2026-05-01-milvus-retrieval-wiring.md  2026-05-01-query-rewriter-llm.md  2026-05-01-router-goldset-eval.md  2026-05-02-alarm-ref-sample-and-parser.md  2026-05-02-counter-ref-parser.md  (+4 more)
spar/docs/work_log/: phase1.md
spar/examples/embedding_server/: README.md  app.py  requirements.txt
spar/scripts/: build_entity_glossary.py  convert_pdf_to_md.py  download_models.py  dump_keywords.py  extract_acronyms.py  fetch_tspec_llm.py  gen_goldset.py  gen_goldset_qa.py  gen_router_goldset.py  ingest_counter_ref.py  ingest_excel.py  init_milvus.py  install_vllm_metal.sh  parse_docx.py  run_ingest.py  run_router_eval.py  serve_vllm.sh  slice_3gpp_intros.py  test_api.py  test_embedding_server.py  translate_goldset.py
spar/tests/: test_routing_3gpp.py
spar/tests/chunkers/: test_reference_chunker.py
spar/tests/encoder/: test_client.py  test_config.py  test_factory.py  test_registry.py
spar/tests/eval/: test_eval_suite.py  test_metrics_faithfulness.py  test_ragas_metrics.py  test_retrieval_metrics.py  test_run_e2e_eval.py  test_run_eval.py  test_run_ragas_eval.py
spar/tests/ingest/: test_chunker_dispatch.py  test_chunkers.py  test_embedder.py  test_excel_loader.py  test_run_ingest_smoke.py  test_term_tagger.py  test_tspec_llm_smoke.py
spar/tests/integration/: test_build_entity_glossary.py  test_run_ingest_excel.py
spar/tests/llm/: test_client.py  test_config.py  test_factory.py  test_fallback.py  test_gemini_cli.py  test_registry.py
spar/tests/parsers/: test_alarm_ref_parser.py  test_counter_ref_parser.py  test_docx_parser.py  test_parameter_ref_parser.py
spar/tests/pipeline/: test_config.py  test_graph.py  test_graph_config.py  test_graph_verify_loop.py  test_nodes.py  test_nodes_retrieval.py  test_nodes_timing.py  test_nodes_verify_toolcall.py
spar/tests/preprocessing/: test_abbrev_mapper.py  test_entity_glossary.py  test_tag_keywords_enriched.py
spar/tests/prompts/: test___init__.py
spar/tests/reranker/: test_client.py  test_config.py  test_factory.py
spar/tests/retrieval/: test_alarm_index.py  test_doc_types.py  test_milvus_client.py  test_query_decomposer.py  test_query_rewriter.py  test_routing.py  test_routing_alarm.py
spar/tests/router/: test_embedding_router.py  test_hybrid_router.py  test_llm_router.py  test_regex_router.py  test_schemas.py
spar/tests/scripts/: test_convert_pdf_to_md_cli.py  test_gen_router_goldset.py  test_run_ingest_excel_unit.py  test_run_ingest_keywords.py  test_run_router_eval.py  test_slice_3gpp_intros.py
yang_param/: .dockerignore  Dockerfile  PRD.md  README.md  docker-compose.yml  pyproject.toml
yang_param/data/yang/: ietf-inet-types.yang  ietf-interfaces.yang
yang_param/docs/: architecture.md
yang_param/docs/plans/: 2026-05-14-yang-schema-store.md
yang_param/indexer/: normalizer.py  parser.py  store.py
yang_param/scripts/: run_server_mock.py
yang_param/server/: mcp_server.py  rest_server.py
yang_param/server/templates/: viewer.html
yang_param/tests/: conftest.py  test_build_get.py  test_builder.py  test_explore.py  test_keys.py  test_mcp_e2e.py  test_mcp_server.py  test_parser.py  test_rest_server.py  test_store.py  test_tree.py  test_types.py
yang_param/tools/: __init__.py  builder.py  explore.py  keys.py  tree.py  types.py
(+714 files in other folders)
