[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causality-graph"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.2",
    "chromadb>=0.4",
    "sentence-transformers>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "anthropic>=0.25",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
