[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spar"
version = "0.0.1"
description = "Samsung RAN Parameter Assistant for RAG (LTE+NR)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SPAR Team" },
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["spar*"]

# ============================================================
# Ruff: 린트 + 포매터
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "data"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # Ruff 고유 룰
    "N",    # pep8-naming
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (포매터가 처리)
    "B008",  # function call in default argument (FastAPI/Typer 패턴)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # 테스트 함수명 자유

[tool.ruff.lint.isort]
known-first-party = ["spar"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Mypy: 타입 체크
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build", "dist", ".venv", "data"]

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: 느린 테스트 (LLM 호출, 인덱싱 등)",
    "integration: 외부 서비스 의존 통합 테스트",
    "unit: 단위 테스트",
]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["src/spar"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
