[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "data*"]

[project]
name = "yang-schema-store"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "libyang>=3.0,<4.0",
    "lxml>=5.0",
    "mcp>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
